--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             body {
                 margin: 0;
                 overflow: hidden;
+                <p› <a href="https://www.allsides.com/media-bias/media-bias-chart">What is your bias?</a></p>
             }
 
             video {
