--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <canvas></canvas>
         <script src="app.js"></script>
         <div class="question">
-            <p> <a"https://www.allsides.com/media-bias/media-bias-chart"><u>WHAT'S YOUR BIAS?</u></a> </p>
+            <p> <a href= "https://www.allsides.com/media-bias/media-bias-chart"><u>WHAT'S YOUR BIAS?</u></a> </p>
        </div>
     </body>
 </html>
