--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             .question{
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
+                vertical-align: middle;
+                line-height: 30px;
                 color:white;
-                font-size: 30px;
+                font-size: 20px;
                 margin-left: 10px;   
                 background-color: transparent;  
                 position:relative;           
