--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Digital Glasses</title>
         <link rel="stylesheet" href="styles.css" />
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap');
             body {
                 margin: 0;
                 overflow: hidden;
@@ -29,7 +29,7 @@
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
                 vertical-align: middle;
-                line-height: 60px;
+                line-height: 50px;
                 color:white;
                 font-size: 25px;
                 margin-left: 10px;   
