--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
                 background-color: transparent;  
                 position:relative;           
             }
+            a:link {
+              color: rgb(0,255,255);
+            }
+            
+            a:visited {
+              color: rgb(0,255,255);
+             }
+        
+            a:hover {
+              color: red;
+            }
+
+            a:active {
+              color: red;
+            }
         </style>
     </head>
     <body>
@@ -44,7 +59,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p> 
-                <a href="https://www.allsides.com/media-bias/media-bias-chart" style="color:white;"><u>WHAT'S YOUR BIAS?</u></a> 
+                <a href="https://www.allsides.com/media-bias/media-bias-chart" /*"style="color:white;"*/ ><u>WHAT'S YOUR BIAS?</u></a> 
             </p>
        </div>
     </body>
