--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 vertical-align: middle;
                 line-height: 30px;
                 color:white;
-                font-size: 25px;
+                font-size: 15px;
                 margin-left: 10px;   
                 background-color: transparent;  
                 position:relative;           
@@ -59,7 +59,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p> 
-                <a href="https://www.allsides.com/media-bias/media-bias-chart" /*"style="color:white;"*/ ><u>WHAT'S YOUR BIAS?</u></a> 
+                <a href="https://www.allsides.com/media-bias/media-bias-chart" /*"style="color:white;"*/ >WHAT'S YOUR BIAS?</a> 
             </p>
        </div>
     </body>
