--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
                 vertical-align: middle;
-                line-height: 30px;
+                line-height: 40px;
                 color:white;
-                font-size: 15px;
+                font-size: 20px;
                 margin-left: 10px;   
                 background-color: transparent;  
                 position:relative;           
@@ -59,7 +59,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p> 
-                <a href="https://www.allsides.com/media-bias/media-bias-chart" /*"style="color:white;"*/ >WHAT'S YOUR BIAS?</a> 
+                <a href="https://www.allsides.com/media-bias/media-bias-chart" /*"style="color:white;"*/ ><u>WHAT'S YOUR BIAS?</u></a> 
             </p>
        </div>
     </body>
