--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Digital Glasses</title>
         <link rel="stylesheet" href="styles.css" />
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:wght@600&display=swap');
             body {
                 margin: 0;
                 overflow: hidden;
@@ -26,14 +26,13 @@
             }
 
             .question{
-                font-family: 'JetBrains Mono', sans-serif;
+                font-family: 'Atkinson Hyperlegible Mono', sans-serif;
                 text-align: center;
                 vertical-align: middle;
                 line-height: 40px;
                 color:white;
                 font-size: 20px;
-                margin-left: 10px;   
-                background-color: transparent;  
+                margin-left: 10px;    
                 position:relative;           
             }
             a:link {
