--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p> 
-                <a href="https://www.allsides.com/media-bias/media-bias-chart" /*"style="color:white;"*/ >WHAT'S YOUR BIAS?</a> 
+                <a href="https://www.allsides.com/media-bias/media-bias-chart" style="text-decoration: none;" >WHAT'S YOUR BIAS?</a> 
             </p>
        </div>
     </body>
