--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p>
-                <a href="https://www.allsides.com/media-bias/media-bias-chart">WHAT'S YOUR BIAS?</a>
+                <a href="https://www.allsides.com/media-bias/media-bias-chart">CHECK YOUR BIAS</a>
             </p>
         </div>
     </body>
