--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Digital Glasses</title>
         <link rel="stylesheet" href="styles.css" />
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:wght@600&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap');
             
             body {
                 margin: 0;
