--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             }
 
             .question {
-                font-family: 'Atkinson Hyperlegible Mono', sans-serif;
+                font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
                 line-height: 1.5;
                 color: white;
