--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
             .question {
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
-                line-height: 1.5;
-                color: white;
-                font-size: 20px;
+                /*line-height: 1.5;*/
+                font-size: 50px;
                 position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
+                /*left: 50%;*/
+                /*transform: translateX(-50%);*/
                 white-space: nowrap;
-                padding: 5px 10px;
-                border-radius: 5px;
+                /*padding: 5px 10px;*/
+                /*border-radius: 5px;*/
             }
 
             a {
