--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
                 /*line-height: 1.5;*/
-                font-size: 30px;
+                font-size: 35px;
                 position: absolute;
                 /*left: 50%;*/
-                transform: translateX(-50%);
+                 /*transform: translateX(-50%);*/
                 white-space: nowrap;
                 /*padding: 5px 10px;*/
                 /*border-radius: 5px;*/
