--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
                 /*line-height: 1.5;*/
-                font-size: 35px;
+                font-size: 45px;
                 position: absolute;
                 /*left: 50%;*/
                  /*transform: translateX(-50%);*/
+                transform: translateY(-50%);
                 white-space: nowrap;
                 /*padding: 5px 10px;*/
                 /*border-radius: 5px;*/
