--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
                 /*line-height: 1.5;*/
-                font-size: 42px;
+                font-size: 43px;
                 position: absolute;
                 /*left: 50%;*/
-                 /*transform: translateX(-50%);*/
-                transform: translateY(-35%);
+                transform: translateX(-1%);
+                transform: translateY(-37%);
                 white-space: nowrap;
                 /*padding: 5px 10px;*/
                 /*border-radius: 5px;*/
