--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 font-size: 44px;
                 position: absolute;
                 /*left: 50%;*/
-                transform: translateX(-4%);
+                transform: translateX(-5%);
                 transform: translateY(-39%);
                 white-space: nowrap;
                 /*padding: 5px 10px;*/
@@ -63,7 +63,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p>
-                <a href="https://www.allsides.com/media-bias/media-bias-chart">CHECK YOUR BIAS</a>
+                <a href="https://www.allsides.com/media-bias/media-bias-chart"><u>CHECK YOUR BIAS</u></a>
             </p>
         </div>
     </body>
