--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 /*line-height: 1.5;*/
                 font-size: 44px;
                 position: absolute;
-                /*left: 50%;*/
+                left: -10%;
                 transform: translateX(-300%);
                 transform: translateY(-38%);
                 white-space: nowrap;
