--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             .question {
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: center;
-                /*line-height: 1.5;*/
-                font-size: 44px;
+                line-height: 1.5;
+                font-size: 20px;
                 position: absolute;
-                left: -1%;
-                transform: translateY(-38.5%);
+                left: 50%;
+                transform: translateX(-50%);
                 white-space: nowrap;
-                /*padding: 5px 10px;*/
-                /*border-radius: 5px;*/
+                padding: 5px 10px;
+                border-radius: 5px;
             }
 
             a {
