--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 position: absolute;
                 left: 50%;
                 transform: translateX(-50%);
+                transform: translateY(50%);
                 white-space: nowrap;
                 padding: 5px 10px;
                 border-radius: 5px;
