--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Digital Glasses</title>
+        <title>Check Your Bias</title>
         <link rel="stylesheet" href="styles.css" />
         <style>
             @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap');
