--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Check Your Bias</title>
+        <title>Digital Glasses</title>
         <link rel="stylesheet" href="styles.css" />
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:wght@600&display=swap');
             
             body {
                 margin: 0;
@@ -28,14 +28,17 @@
             }
 
             .question {
-                font-family: 'JetBrains Mono', sans-serif;
+                font-family: 'Atkinson Hyperlegible Mono', sans-serif;
                 text-align: center;
-                line-height: 1.5;
+                line-height: 1.5; /* Adjusted for better spacing */
+                color: white;
                 font-size: 20px;
                 position: absolute;
+                bottom: 20px; /* Positioned at the bottom for better visibility */
                 left: 50%;
-                transform: translateY(50%);
+                transform: translateX(-50%);
                 white-space: nowrap;
+                background: rgba(0, 0, 0, 0.5); /* Adds slight contrast */
                 padding: 5px 10px;
                 border-radius: 5px;
             }
@@ -62,7 +65,7 @@
         <script src="app.js"></script>
         <div class="question">
             <p>
-                <a href="https://www.allsides.com/media-bias/media-bias-chart"><u>CHECK YOUR BIAS</u></a>
+                <a href="https://www.allsides.com/media-bias/media-bias-chart">WHAT'S YOUR BIAS?</a>
             </p>
         </div>
     </body>
