--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 font-size: 20px;
                 position: absolute;
                 left: 50%;
+                top: 20px;
                 transform: translateX(-50%);
                 white-space: nowrap;
                 padding: 5px 10px;
