--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             }
 
             .question {
-                font-family: 'JetBrains Mono', sans-serif;
+                height: 100%;
+                line-height: 100%;
                 text-align: center;
-                line-height: 1.5; 
+                font-family: 'JetBrains Mono', sans-serif;
                 font-size: 20px;
                 position: absolute;
                 left: 50%;
-                top: 100px;
                 transform: translateX(-50%);
                 white-space: nowrap;
                 padding: 5px 10px;
