--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             }
 
             .question {
-                height: 100%;
-                line-height: 100%;
+                height: 100vh;
+                line-height: 100vh;
                 text-align: center;
                 font-family: 'JetBrains Mono', sans-serif;
                 font-size: 20px;
