--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 left: 50%;
                 transform: translateX(-50%);
                 white-space: nowrap;
-                padding: 5px 10px;
-                border-radius: 5px;
+               /* padding: 5px 10px; */
+                /*  border-radius: 5px; */
             }
 
             a {
