--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
             }
 
             .question {
-                height: 100vh;
-                line-height: 100vh;
-                text-align: center;
                 font-family: 'JetBrains Mono', sans-serif;
+                text-align: center;
+                line-height: 1.5;
                 font-size: 20px;
                 position: absolute;
                 left: 50%;
                 transform: translateX(-50%);
                 white-space: nowrap;
-               /* padding: 5px 10px; */
-                /*  border-radius: 5px; */
+                padding: 5px 10px;
+                border-radius: 5px;
             }
 
             a {
