--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             }
 
             video {
-                position: absolute;
-                visibility: hidden;
-                object-fit: cover;
+            position: absolute;
+            width: 0;
+            height: 0;
+            pointer-events: none;
+            opacity: 0;
             }
 
             canvas {
