--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
             opacity: 0;
             }
 
-            canvas {
+           canvas {
                 position: absolute;
                 top: 0;
                 left: 0;
-                width: 100vw;
-                height: 100vh;
+                display: block;
             }
 
             .question {
