--- a/index.html
+++ b/index.html
@@ -15,31 +15,16 @@
             }
 
             video {
-            position: absolute;
-            width: 0;
-            height: 0;
-            pointer-events: none;
-            opacity: 0;
+                position: absolute;
+                visibility: hidden;
+                object-fit: cover;
             }
 
-           canvas {
+            canvas {
                 position: absolute;
                 top: 0;
                 left: 0;
                 display: block;
-            }
-
-            .question {
-                font-family: 'JetBrains Mono', sans-serif;
-                text-align: right;
-                line-height: 1.5;
-                font-size: 20px;
-                position: absolute;
-                right: 10%;
-                /*transform: translateX(-50%);*/
-                white-space: nowrap;
-                padding: 5px 10px;
-                border-radius: 5px;
             }
 
             .title {
@@ -49,6 +34,19 @@
                 font-size: 50px;
                 position: absolute;
                 left: 10%;
+                /*transform: translateX(-50%);*/
+                white-space: nowrap;
+                padding: 5px 10px;
+                border-radius: 5px;
+            }
+
+            .question {
+                font-family: 'JetBrains Mono', sans-serif;
+                text-align: right;
+                line-height: 1.5;
+                font-size: 20px;
+                position: absolute;
+                right: 10%;
                 /*transform: translateX(-50%);*/
                 white-space: nowrap;
                 padding: 5px 10px;
@@ -82,12 +80,12 @@
         <script src="app.js"></script>
         <div class="title">
             <p>
-                CHECK YOUR BIAS
+                CHECK YOUR <br> BIAS
             </p>
         </div>
         <div class="question">
             <p>
-                LEARN MORE ON <a href="https://www.allsides.com/media-bias/media-bias-chart"><u>ALLSIDES.COM</u></a>
+                LEARN MORE ON <br><a href="https://www.allsides.com/media-bias/media-bias-chart"><u>ALLSIDES.COM</u></a>
             </p>
         </div>
         <div class="eye"></div>
