--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: left;
                 line-height: 1;
-                font-size: 60px;
+                font-size: 70px;
                 position: absolute;
-                left: 5%;
+                left: 2%;
+                top: 2%;
                 /*transform: translateX(-50%);*/
                 white-space: nowrap;
                 padding: 5px 10px;
@@ -43,10 +44,11 @@
             .question {
                 font-family: 'JetBrains Mono', sans-serif;
                 text-align: right;
-                line-height: 3;
+                line-height: 1;
                 font-size: 20px;
                 position: absolute;
-                right: 5%;
+                right: 2%;
+                top: 2%;
                 /*transform: translateX(-50%);*/
                 white-space: nowrap;
                 padding: 5px 10px;
