--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 position: absolute;
                 left: 1%;
                 top: 1%;
-                /*transform: translateX(-50%);*/
+                transform: translateY(-50%);
                 white-space: nowrap;
                 padding: 5px 10px;
                 border-radius: 5px;
