--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             aspect-ratio: 1;
             height: 20vh;
             position: absolute;
-            bottom: 10vh;
-            right: 10vh;
+            bottom: 1%;
+            right: 1%;
             background-image: url(images/eye.png);
             background-size: contain;
             background-repeat: no-repeat;
