--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 font-size: 20px;
                 position: absolute;
                 right: 1%;
-                top: 10%;
+                top: 13%;
                 /*transform: translateX(-50%);*/
                 white-space: nowrap;
                 padding: 5px 10px;
@@ -57,10 +57,10 @@
 
             .eye {
             aspect-ratio: 1;
-            height: 5vh;
+            height: 40px;
             position: absolute;
-            bottom: 1%;
-            right: 1%;
+            bottom: 5%;
+            right: 5%;
             background-image: url(images/eye.png);
             background-size: contain;
             background-repeat: no-repeat;
