--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 font-size: 20px;
                 position: absolute;
                 right: 1%;
-                top: 13%;
+                top: 12%;
                 /*transform: translateX(-50%);*/
                 white-space: nowrap;
                 padding: 5px 10px;
@@ -65,6 +65,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             pointer-events: all;
+            z-index: 1000;
             }
 
             a {
