--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
                 LEARN MORE ON <br><a href="https://www.allsides.com/media-bias/media-bias-chart"><u>ALLSIDES.COM</u></a>
             </p>
         </div>
-        <div class="eye"></div>
+        <div class="eye" id="eye"></div>
     </body>
 </html>
