--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             background-repeat: no-repeat;
             pointer-events: all;
             z-index: 1000;
+                background-color: red;
             }
 
             a {
